--- a/src/main/resources/templates/successRegister.html
+++ b/src/main/resources/templates/successRegister.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h1>Cadastro efetuado com sucesso</h1>
-        <p>Olá, <span th:text="${nome}"></span></p>    
+        <p>Olá, <span th:text="${name}"></span></p>    
     <body>
 </html>
